# rust-truth-table

./: .gitignore  Cargo.toml  LICENSE  README.md  README.pt-br.md  index.html  truth-table.html
.github/workflows/: deploy.yml  rust.yml
src/: lib.rs  main.rs
src/config/: config.rs
src/lexer/: lexer.rs
src/model/: mod.rs  syntax.rs  token.rs  trie.rs
src/parser/: parser.rs
src/process/: process.rs
